--- a/index.qmd
+++ b/index.qmd
@@ -3,3 +3,11 @@
 This is a Quarto book.
 
 To learn more about Quarto books visit <https://quarto.org/docs/books>.
+
+This is some python.
+
+```{python}
+
+1+1
+
+```
