--- a/intro.qmd
+++ b/intro.qmd
@@ -3,3 +3,9 @@
 This is a book created from markdown and executable code.
 
 See @knuth84 for additional discussion of literate programming.
+
+```{python}
+
+print("this is some new text")
+
+```
